<resources>
    <string name="app_name">Resep Masakan</string>
    <string name="recipe_title_1">Oseng Cumi Kemangi</string>
    <string name="recipe_title_2">Sop Iga Sapi</string>
    <string name="recipe_title_3">Udang Sambal Iris</string>
    <string name="recipe_title_4">Mie Goreng Pedas</string>
    <string name="recipe_title_5">Sop Iga Sapi</string>
    <string name="recipe_title_6">Soto Ayam Kuah Bening</string>
    <string name="recipe_title_7">Perkdedel Kentang</string>
    <string name="recipe_title_8">Semur Ikan</string>
    <string name="recipe_title_9">Sayur Bening</string>
    <string name="recipe_title_10">Soto Ayam Kuning</string>
    <string name="recipe_title_11">Udang Mentega</string>
    <string name="recipe_title_12">Bihun Tumis</string>
    <string name="recipe_title_13">Sambal Cengek</string>
    <string name="recipe_title_14">Sop Iga Sapi</string>
    <string name="recipe_title_15">Balado Ikan Asin Pakang</string>
    <string name="recipe_title_16">Dori Katsu</string>
    <string name="recipe_1">Alat dan Bahan:\n1/2 kg cumi segar, bersihkan, buang tinta\nSegenggam kemangi\n6 butir bawang merah, iris\n
3 butir bawang putih, iris\n
2 batang sere, iris\n
5 lembar daun jeruk, buang tulang daun\n
2 lembar daun salam\n
2 cm lengkuas, iris\n
secukupnya Garam\n
secukupnya Gula pasir\n
secukupnya Kaldu bubuk\nCabe sesuai selera, me cabe rawit 20 apa 25 biji, iris</string>
</resources>
