<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <Button
            android:id="@+id/recipe_1_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_1"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/recipe_2_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_2"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/recipe_3_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_3"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/recipe_4_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_4"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/recipe_5_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_5"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_6"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_7"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_8"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_9"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_10"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_11"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_12"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_13"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_14"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_15"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title_16"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</ScrollView>